{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 182,
  "lineage": "8ae6518f-258b-1340-3529-e70a4f5dea4b",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static-vm00",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.118.127.78",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-10-13T02:03:39.297-07:00",
            "id": "projects/norse-block-303620/regions/europe-central2/addresses/static-ip-vm00",
            "name": "static-ip-vm00",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "norse-block-303620",
            "region": "europe-central2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-block-303620/regions/europe-central2/addresses/static-ip-vm00"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-10-13T02:04:02.160-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/norse-block-303620/global/firewalls/allow-all",
            "log_config": [],
            "name": "allow-all",
            "network": "https://www.googleapis.com/compute/v1/projects/norse-block-303620/global/networks/network-vpc-europe01",
            "priority": 1000,
            "project": "norse-block-303620",
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-block-303620/global/firewalls/allow-all",
            "source_ranges": [
              "10.84.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_europe_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-10-13T02:04:02.673-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/norse-block-303620/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/norse-block-303620/global/networks/network-vpc-europe01",
            "priority": 1000,
            "project": "norse-block-303620",
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-block-303620/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_europe_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_europe_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/norse-block-303620/global/networks/network-vpc-europe01",
            "mtu": 0,
            "name": "network-vpc-europe01",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "norse-block-303620",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-block-303620/global/networks/network-vpc-europe01"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route_table_vpc_europe_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/norse-block-303620/global/routes/internet-access",
            "name": "internet-access",
            "network": "https://www.googleapis.com/compute/v1/projects/norse-block-303620/global/networks/network-vpc-europe01",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/norse-block-303620/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "norse-block-303620",
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-block-303620/global/routes/internet-access",
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_europe_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_e01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-10-13T02:04:02.897-07:00",
            "gateway_address": "10.84.1.1",
            "id": "projects/norse-block-303620/regions/europe-central2/subnetworks/subnetwork-vpc-europe01",
            "ip_cidr_range": "10.84.1.0/24",
            "name": "subnetwork-vpc-europe01",
            "network": "https://www.googleapis.com/compute/v1/projects/norse-block-303620/global/networks/network-vpc-europe01",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "norse-block-303620",
            "purpose": "PRIVATE",
            "region": "europe-central2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-block-303620/regions/europe-central2/subnetworks/subnetwork-vpc-europe01",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_europe_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_e02",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-10-13T02:04:03.000-07:00",
            "gateway_address": "10.84.2.1",
            "id": "projects/norse-block-303620/regions/europe-central2/subnetworks/subnetwork-vpc-europe02",
            "ip_cidr_range": "10.84.2.0/24",
            "name": "subnetwork-vpc-europe02",
            "network": "https://www.googleapis.com/compute/v1/projects/norse-block-303620/global/networks/network-vpc-europe01",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "norse-block-303620",
            "purpose": "PRIVATE",
            "region": "europe-central2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-block-303620/regions/europe-central2/subnetworks/subnetwork-vpc-europe02",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_europe_01"
          ]
        }
      ]
    },
    {
      "module": "module.vm00",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm0",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20231010",
                    "labels": {
                      "my_label": "value"
                    },
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/norse-block-303620/zones/europe-central2-a/disks/vm00-bastion"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/norse-block-303620/zones/europe-central2-a/instances/vm00-bastion",
            "instance_id": "8746679491038066400",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "i5dZTRGTMRY=",
            "metadata_startup_script": "echo hi \u003e /test.txt",
            "name": "vm00-bastion",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.116.252.203",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/norse-block-303620/global/networks/network-vpc-europe01",
                "network_ip": "10.84.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/norse-block-303620/regions/europe-central2/subnetworks/subnetwork-vpc-europe01",
                "subnetwork_project": "norse-block-303620"
              }
            ],
            "project": "norse-block-303620",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-block-303620/zones/europe-central2-a/instances/vm00-bastion",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "deafult",
              "zone"
            ],
            "tags_fingerprint": "YhiCNQQO0gM=",
            "zone": "europe-central2-a"
          },
          "dependencies": [
            "google_compute_network.vpc_europe_01",
            "google_compute_subnetwork.subnet_e01"
          ]
        }
      ]
    },
    {
      "module": "module.vm01",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm0",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20231010",
                    "labels": {
                      "my_label": "value"
                    },
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/norse-block-303620/zones/europe-central2-a/disks/vm01"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/norse-block-303620/zones/europe-central2-a/instances/vm01",
            "instance_id": "1583669709218559733",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "i5dZTRGTMRY=",
            "metadata_startup_script": "echo hi \u003e /test.txt",
            "name": "vm01",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.0.246.77",
                    "network_tier": "STANDARD"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/norse-block-303620/global/networks/network-vpc-europe01",
                "network_ip": "10.84.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/norse-block-303620/regions/europe-central2/subnetworks/subnetwork-vpc-europe02",
                "subnetwork_project": "norse-block-303620"
              }
            ],
            "project": "norse-block-303620",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-block-303620/zones/europe-central2-a/instances/vm01",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "deafult",
              "zone"
            ],
            "tags_fingerprint": "YhiCNQQO0gM=",
            "zone": "europe-central2-a"
          },
          "dependencies": [
            "google_compute_network.vpc_europe_01",
            "google_compute_subnetwork.subnet_e02"
          ]
        }
      ]
    }
  ]
}